--- a/themes/eric/sass/styles.scss
+++ b/themes/eric/sass/styles.scss
@@ -522,22 +522,22 @@ em {
             
           }
           &.menu-about a {
-            background-image: url(../images/icon-info.svg);
+            background-image: url(../images/footer-icon-info.png);
           }
           &.menu-discourse a {
-            background-image: url(../images/icon-discourse.svg);
+            background-image: url(../images/footer-icon-discourse.png);
           }
           &.menu-terms a {
-            background-image: url(../images/icon-terms.svg);
+            background-image: url(../images/footer-icon-terms.png);
           }
           &.menu-legal a {
-            background-image: url(../images/icon-legal.svg);
+            background-image: url(../images/footer-icon-legal.png);
           }
           &.menu-privacy a {
-            background-image: url(../images/icon-privacy.svg);
+            background-image: url(../images/footer-icon-privacy.png);
           }
           &.menu-cookies a {
-            background-image: url(../images/icon-cookies.svg);
+            background-image: url(../images/footer-icon-cookies.png);
           }
         }
       }
@@ -2495,6 +2495,38 @@ em {
     /*display: none;*/
   }
 }
+
+.widget-submit-badge {
+  margin: 40px auto;
+  width: 260px; height: 260px;
+  border-radius: 50%;
+  background: #E04164;
+  a {
+    display: block;
+    width: 100%; height: 100%;
+    text-align: center;
+    border: none;
+    box-sizing: border-box;
+    padding: 70px 20px 0;
+    font-style: italic;
+    font-family: $font-family-sans-serif;
+    font-weight: 300;
+    font-size: 2.25em;
+    line-height: 1.2;
+    color: #fff;
+    strong {
+      font-style: normal;
+      font-weight: 700;
+      font-size: 1.714em;
+      letter-spacing: 2px;
+    }
+  }
+  img {
+    /*display: none;*/
+  }
+}
+
+
 
 
 .widget-recent-posts {
