--- a/themes/eric/sass/styles.scss
+++ b/themes/eric/sass/styles.scss
@@ -320,6 +320,7 @@ em {
       display: block;
       float: left;
       position: relative;
+      margin: 0 9px;
       &:hover {
         color: #fff;
         background-color: #000;
@@ -334,7 +335,7 @@ em {
         line-height: 1em;
         text-transform: uppercase;
         color: inherit;
-        padding: 10px 20px;
+        padding: 10px 55px;
       }
       &.current-menu-item, &.current-menu-ancestor {
         color: #fff;
@@ -350,7 +351,7 @@ em {
       }
       .submenu-toggle {
         position: absolute;
-        left: 50%; top: 7px;
+        left: 50%; top: 98px;
         margin-left: 82px;
         width: 20px; height: 20px;
         display: none;
@@ -370,7 +371,7 @@ em {
         display: none;
         position: absolute;
         top: 100%; left: 0;
-        margin: 0; padding: 0;
+        margin: 1px 0 0; padding: 0;
         list-style: none;
         background-color: #fff;
         z-index: 999;
@@ -393,7 +394,7 @@ em {
           a {
             display: block;
             width: 100%;
-            padding: 14px 10px 10px;
+            padding: 14px 0 10px;
             color: #000;
             &:hover {
               color: #fff;
