Judges Evaluation Screens

--- a/themes/eric/sass/_variables.scss
+++ b/themes/eric/sass/_variables.scss
@@ -664,3 +664,10 @@ $pre-bg:                      #f7f7f9 !default;
 $pre-color:                   $gray-dark !default;
 $pre-border-color:            #ccc !default;
 $pre-scrollable-max-height:   340px !default;
+
+
+// Bootstrap slider
+$slider-line-height: 20px !default;
+$slider-border-radius: 4px !default;
+$slider-horizontal-width: 100% !default;
+$slider-vertical-height: 100% !default;
