--- a/themes/eric/style.css
+++ b/themes/eric/style.css
@@ -6,3 +6,13 @@ Author URI: http://www.futurescape.in
 Description: This  theme specially created for the Equal Rating Innovation Challenge - Mozilla.
 Version: 1.0
 */
+
+.submission-form-status.closed {
+  background-color: #E04164 !important;
+}
+
+@media (max-width: 991px) {
+  .site-header .countdown-wrapper {
+    background: #E04164 !important;
+  }
+}
