Added evaluate now button

--- a/themes/eric/sass/styles.scss
+++ b/themes/eric/sass/styles.scss
@@ -2799,6 +2799,7 @@ em {
   }
 }
 
+
 .project-info {
   margin: 0;
   .tbl-col {
@@ -3773,4 +3774,27 @@ body[class*=jconfirm-no-scroll-] {
   border-radius: 0px;
   margin: 0;
   border-left: solid 1px #ddd;
+}
+
+
+
+
+.link-button {
+  display: inline-block;
+  margin-top: 20px;
+  outline: none !important;
+  font-family: $font-family-sans-serif;
+  padding: 12px 20px;
+  text-align: center;
+  border: none !important;
+  color: #fff;
+  background: $brand-secondary;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 14px;
+  line-height: 1;
+  &:hover {
+    background: #000;
+    color: #fff;
+  }
 }
