--- a/themes/eric/stylesheets/styles.css
+++ b/themes/eric/stylesheets/styles.css
@@ -7213,3 +7213,25 @@ body[class*=jconfirm-no-scroll-] {
   margin: 0;
   border-left: solid 1px #ddd;
 }
+
+/* line 3782, ../sass/styles.scss */
+.link-button {
+  display: inline-block;
+  margin-top: 20px;
+  outline: none !important;
+  font-family: Lato, "Fira Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  padding: 12px 20px;
+  text-align: center;
+  border: none !important;
+  color: #fff;
+  background: #2098d5;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 14px;
+  line-height: 1;
+}
+/* line 3796, ../sass/styles.scss */
+.link-button:hover {
+  background: #000;
+  color: #fff;
+}
