--- a/themes/eric/sass/styles.scss
+++ b/themes/eric/sass/styles.scss
@@ -2780,12 +2780,12 @@ em {
     float: left;
     padding: 0 10px 0 0;
     &.col-sn {width: 4%;}
-    &.col-project-name {width: 16%;}
-    &.col-team-leader {width: 16%;}
-    &.col-country {width: 16%;}
+    &.col-project-name {width: 18%;}
+    &.col-team-leader {width: 18%;}
+    &.col-country {width: 14%;}
     &.col-image {width: 8%;}
-    &.col-evaluation {width: 21%;}
-    &.col-score {width: 9%;}
+    &.col-evaluation {width: 18%;}
+    &.col-score {width: 10%;}
     &.col-status {width: 10%;}
   }
   &.tbl-row-head {
@@ -2809,7 +2809,8 @@ em {
     font-family: $font-family-sans-serif;
     font-weight: 300;
     span {
-      font-size: 1.285rem;
+      font-size: 1.142rem;
+      line-height: 1.3;
       font-weight: 400;
     }
     &.col-solution-name {width: 25%;}
