--- a/themes/eric/sass/styles.scss
+++ b/themes/eric/sass/styles.scss
@@ -338,7 +338,12 @@ em {
         line-height: 1em;
         text-transform: uppercase;
         color: inherit;
-        padding: 10px 54px;
+        padding: 10px 25px;
+      }
+      &:first-child {
+        > a {
+          padding: 10px 28px;
+        }
       }
       &.current-menu-item, &.current-menu-ancestor {
         color: #fff;
@@ -2443,12 +2448,20 @@ em {
   }
 }
 
-.widget-equalrating-means {
+
+.widget-definition {
   border: 1px solid #efefef;
-  border-top: 5px solid $brand-secondary;
-  padding: 10px 15px;
+  padding: 15px 10px 15px;
   font-family: $font-family-sans-serif;
   font-weight: 300;
+  margin: 5px 0 40px;
+  position: relative;
+  &::before {
+    content: '';
+    width: 100%; height: 5px;
+    position: absolute;
+    top: 0; left: 0;
+  }
   .widget-title {
     color: #000;
     margin: 10px 0 0 -12px;
@@ -2472,6 +2485,25 @@ em {
       font-weight: 400;
     }
   }
+}
+
+.widget-equalrating-means {
+  &::before {
+    background-color: $brand-secondary;
+  }
+  .widget-title {
+    background: url(../images/txt_equal-rating.png) no-repeat 0 0;
+    background-size: 160px 26px;
+  }
+}
+.widget-definition-mentorship,
+.widget-definition-mentor {
+  &::before {
+    background-color: #f06c23;
+  }
+}
+.widget-definition-mentor {
+  
 }
 
 
@@ -2944,14 +2976,15 @@ em {
   h4 {
     font-family: $font-family-sans-serif;
     font-weight: 400;
-    font-size: 1rem;
-    margin: 0 0 15px;
-    color: #000;
+    font-size: 1.142rem;
+    margin: 0 0 10px;
+    color: $brand-secondary;
+    
   }
   .hline {
-    height: 1px;
-    background: #f1f1f2;
-    margin: 25px 0 10px;
+    height: 2px;
+    background: #ddd;
+    margin: 35px 0 15px;
   }
   table {
     width: 100%;
@@ -3797,5 +3830,72 @@ body[class*=jconfirm-no-scroll-] {
   &:hover {
     background: #000;
     color: #fff;
+  }
+}
+
+
+
+/**
+ * S E M I F I N A L I S T S   P A G E
+ * -----------------------------------
+ */
+#semifinalists-list {
+  margin-top: 40px;
+  
+  .col-md-4:nth-of-type(1n+4) {
+    .semifinalist {
+      margin-bottom: 0;
+    }
+  }
+  
+  .banner-demoday {
+    margin: 0 auto 40px;
+  }
+  .semifinalist {
+    padding-bottom: 20px;
+    margin-bottom: 40px;
+    position: relative;
+    img {
+      margin: 0 auto 15px;
+    }
+    h4, .title, .url {
+      font-family: $font-family-sans-serif;
+    }
+    h4 {
+      font-size: 1.5em;
+      line-height: 1.3;
+      font-weight: 700;
+      margin: 0; padding: 0;
+    }
+    .title {
+      font-weight: 300;
+    }
+    .url {
+      font-style: italic;
+    }
+    .description {
+      margin: 20px 0 0;
+      p:last-child {
+        margin: 0;
+      }
+    }
+  }
+  @include media-breakpoint-down(sm) {
+    margin-top: 30px;
+    .banner-demoday {
+      margin: 0 auto;
+    }
+    .col-md-4:nth-of-type(1n+4) {
+      .semifinalist {
+        margin-bottom: 40px;
+      }
+    }
+    .semifinalist {
+      h4 {
+        font-size: 1.5em;
+        font-weight: 700;
+        margin: 0; padding: 0;
+      }
+    }
   }
 }
