--- a/themes/eric/sass/styles.scss
+++ b/themes/eric/sass/styles.scss
@@ -3850,6 +3850,7 @@ body[class*=jconfirm-no-scroll-] {
   
   .banner-demoday {
     margin: 0 auto 40px;
+    max-width: 260px;
   }
   .semifinalist {
     padding-bottom: 20px;
