--- a/themes/eric/stylesheets/styles.css
+++ b/themes/eric/stylesheets/styles.css
@@ -7282,22 +7282,23 @@ body[class*=jconfirm-no-scroll-] {
 /* line 3851, ../sass/styles.scss */
 #semifinalists-list .banner-demoday {
   margin: 0 auto 40px;
+  max-width: 260px;
 }
-/* line 3854, ../sass/styles.scss */
+/* line 3855, ../sass/styles.scss */
 #semifinalists-list .semifinalist {
   padding-bottom: 20px;
   margin-bottom: 40px;
   position: relative;
 }
-/* line 3858, ../sass/styles.scss */
+/* line 3859, ../sass/styles.scss */
 #semifinalists-list .semifinalist img {
   margin: 0 auto 15px;
 }
-/* line 3861, ../sass/styles.scss */
+/* line 3862, ../sass/styles.scss */
 #semifinalists-list .semifinalist h4, #semifinalists-list .semifinalist .title, #semifinalists-list .semifinalist .url {
   font-family: Lato, "Fira Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
-/* line 3864, ../sass/styles.scss */
+/* line 3865, ../sass/styles.scss */
 #semifinalists-list .semifinalist h4 {
   font-size: 1.5em;
   line-height: 1.3;
@@ -7305,19 +7306,19 @@ body[class*=jconfirm-no-scroll-] {
   margin: 0;
   padding: 0;
 }
-/* line 3870, ../sass/styles.scss */
+/* line 3871, ../sass/styles.scss */
 #semifinalists-list .semifinalist .title {
   font-weight: 300;
 }
-/* line 3873, ../sass/styles.scss */
+/* line 3874, ../sass/styles.scss */
 #semifinalists-list .semifinalist .url {
   font-style: italic;
 }
-/* line 3876, ../sass/styles.scss */
+/* line 3877, ../sass/styles.scss */
 #semifinalists-list .semifinalist .description {
   margin: 20px 0 0;
 }
-/* line 3878, ../sass/styles.scss */
+/* line 3879, ../sass/styles.scss */
 #semifinalists-list .semifinalist .description p:last-child {
   margin: 0;
 }
@@ -7326,15 +7327,15 @@ body[class*=jconfirm-no-scroll-] {
   #semifinalists-list {
     margin-top: 30px;
   }
-  /* line 3885, ../sass/styles.scss */
+  /* line 3886, ../sass/styles.scss */
   #semifinalists-list .banner-demoday {
     margin: 0 auto;
   }
-  /* line 3889, ../sass/styles.scss */
+  /* line 3890, ../sass/styles.scss */
   #semifinalists-list .col-md-4:nth-of-type(1n+4) .semifinalist {
     margin-bottom: 40px;
   }
-  /* line 3894, ../sass/styles.scss */
+  /* line 3895, ../sass/styles.scss */
   #semifinalists-list .semifinalist h4 {
     font-size: 1.5em;
     font-weight: 700;
