--- a/themes/eric/sass/styles.scss
+++ b/themes/eric/sass/styles.scss
@@ -3866,16 +3866,16 @@ body[class*=jconfirm-no-scroll-] {
       font-size: 1.5em;
       line-height: 1.3;
       font-weight: 700;
-      margin: 0; padding: 0;
+      margin: 0 0 15px; padding: 0;
     }
     .title {
       font-weight: 300;
-      margin: 15px 0;
     }
     .url {
       font-style: italic;
     }
     .description {
+      margin: 15px 0 0;
       p:last-child {
         margin: 0;
       }
