--- a/themes/eric/sass/styles.scss
+++ b/themes/eric/sass/styles.scss
@@ -225,7 +225,7 @@ em {
     border: 1px solid #000;
     padding: 5px 10px;
     text-align: center;
-    width: 190px; height: 80px;
+    width: 200px; height: 80px;
     overflow: hidden;
     h4 {
       margin: 0 0 5px; padding: 0;
@@ -336,11 +336,12 @@ em {
         line-height: 1em;
         text-transform: uppercase;
         color: inherit;
-        padding: 10px 30px;
+        padding: 10px 20px;
       }
+      
       &:first-child {
         > a {
-          padding: 10px 28px;
+          padding: 10px 26px;
         }
       }
       &.current-menu-item, &.current-menu-ancestor {
@@ -2283,6 +2284,9 @@ em {
 
 
 
+
+
+
 /**
  * F A Q s   P A G E
  * -----------------------------------------
@@ -3889,9 +3893,6 @@ body[class*=jconfirm-no-scroll-] {
   }
   @include media-breakpoint-down(sm) {
     margin-top: 30px;
-    .banner-demoday {
-      margin: 0 auto;
-    }
     .col-md-4:nth-of-type(1n+4) {
       .semifinalist {
         margin-bottom: 40px;
@@ -3911,5 +3912,238 @@ body[class*=jconfirm-no-scroll-] {
   img {
     width: 100%;
     height: auto;
+  }
+}
+
+
+.video-wrapper {
+  width: 100%;
+  position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	height: 0;
+  &.livestream-wrapper {
+    padding-bottom: 59.375%; //air.mozilla.org
+  }
+  iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
+
+
+
+/**
+ * C O M M U N I T Y   V O T I N G
+ * -----------------------------------
+ */
+#semifinalists-voting-list {
+  margin-top: 40px;
+  .col-md-4:nth-of-type(1n+4) {
+    .semifinalist {
+      margin-bottom: 0;
+    }
+  }
+  
+  .semifinalist {
+    padding-bottom: 20px;
+    margin-bottom: 40px;
+    position: relative;
+    img {
+      margin: 0 auto 15px;
+    }
+    h4, .title, .url {
+      font-family: $font-family-sans-serif;
+    }
+    h4 {
+      font-size: 1.714rem;
+      line-height: 1.3;
+      font-weight: 700;
+      margin: 0 0 15px; padding: 0;
+    }
+    .title {
+      font-weight: 300;
+    }
+    .url {
+      font-style: italic;
+    }
+    .description {
+      margin: 15px 0 0;
+      p:last-child {
+        margin: 0;
+      }
+    }
+  }
+  @include media-breakpoint-down(sm) {
+    margin-top: 30px;
+    .banner-demoday {
+      margin: 0 auto;
+    }
+    .col-md-4:nth-of-type(1n+4) {
+      .semifinalist {
+        margin-bottom: 40px;
+      }
+    }
+    .semifinalist {
+      h4 {
+        font-size: 1.5em;
+        font-weight: 700;
+        margin: 0; padding: 0;
+      }
+    }
+  }
+}
+
+
+.btn-vote {
+  display: block;
+  position: relative;
+  width: 100%;
+  font-size: 20px;
+  text-align: center;
+  background-color: #d0d1d2;
+  color: #fff;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 1.714em;
+  line-height: 30px;
+  font-weight: 900;
+  font-family: $font-family-sans-serif;
+  padding: 12px 0;
+  margin: 0 0 20px;
+  border: none !important;
+  text-decoration: none;
+  cursor: default;
+  .checkmark-vote {
+    display: block;
+    position: absolute;
+    left: 50%; margin-left: -72px;
+    top: 50%; margin-top: -10px;
+    width: 35px; height: 20px;
+    background: url(../images/checkmark-vote.png) no-repeat center center;
+    background-size: 22px 18px;
+  }
+  
+  
+  &:hover, &:focus {
+    color: #fff;
+  }
+  &.enabled {
+    cursor: pointer;
+    background: $brand-secondary;
+    &:hover, &:focus {
+      color: $brand-secondary;
+      background: $brand-primary;
+    }
+  }
+  &.voted {
+    cursor: default;
+    font-size: 1.285rem;
+    background: $brand-primary;
+    color: $brand-secondary;
+    &:hover, &:focus {
+      background: $brand-primary;
+      color: $brand-secondary;
+    }
+  }
+}
+
+
+.voting-status {
+  text-align: center;
+  font-size: 1.714em;
+  line-height: 1.2;
+  font-weight: 700;
+  font-weight: 900;
+  font-family: $font-family-sans-serif;
+  color: #fff !important;
+  padding: 12px;
+  margin: 30px 0;
+  background-color: #2d3190;
+  display: block;
+  border: none !important;
+  span {
+    color: $brand-primary;
+  }
+  
+  &.pending {
+    background-color: #00A7E0;
+  }
+  &.closed {
+    background-color: #E04164;
+  }
+  @include media-breakpoint-down(md) {
+    font-size: 1.285em;
+    
+  }
+}
+
+
+.side-banners {
+  width: 100%;
+  img {
+    display: block;
+    margin: 0 auto 40px;
+    max-width: 260px;
+    &.banner-cast-vote {
+      margin-bottom: 30px;
+      max-width: 180px;
+    }
+    &.banner-voting-closes {
+      max-width: 260px;
+    }
+    @include media-breakpoint-down(md) {
+      margin-bottom: 30px;
+    }
+  }
+}
+
+
+
+#demoday-program {
+  margin-top: 50px;
+  border-top: 5px solid #000;
+  padding-top: 20px;
+  font-family: $font-family-sans-serif;
+  font-weight: 300;
+  .program-row {
+    @include clearfix;
+    position: relative;
+    padding: 15px;
+    &:nth-child(odd) {
+      background: #f8f8f8;
+    }
+    &.row-header {
+      font-weight: 700;
+      text-transform: uppercase;
+      .col-location {
+        font-style: normal;
+        font-weight: 700;
+      }
+    }
+    .program-col {
+      float: left;
+      padding-right: 20px
+    }
+    .col-time {
+      width: 15%;
+      font-weight: 700;
+    }
+    .col-event {
+      width: 85%;
+    }
+  }
+  @include media-breakpoint-down(sm) {
+    .program-row {
+      .program-col {
+        float: none;
+        padding-right: 0;
+      }
+      .col-time, .col-event {
+        width: 100%;
+      }
+    }
   }
 }
